# stoml

./: CMakeLists.txt  LICENSE  README.md  stoml.c  stoml.h
test/: CMakeLists.txt  test.c  testB.toml  testC.toml  testD.toml  testE.toml  testF.toml
